# CAS

./: .gitignore  CMakeLists.txt  SConstruct  cas.sh
include/ring/: concepts.h  integer.h  integermod.h  quorem.h
math/: CMakeLists.txt  algorithm.h  cas_rational.cpp  cas_rational.h  gmp_rational.cpp  gmp_rational.h  integer.cpp  integer.h  integer_mod.h  quadratic_integer.cpp  quadratic_integer.h  ring.cpp  ring.h
math/algorithm/: associate.cpp  common.h
math/polynomial/: polynomial.h  term.h
math/ring/: cas_rational.cpp  cas_rational.h  gmp_rational.cpp  gmp_rational.h  integer.h  integer_mod.h  quadratic_integer.h
src/: CMakeLists.txt  integer.cpp
tests/: CMakeLists.txt  abs_test.cpp  concepts_test.cpp  gcd_test.cpp  integer_mod_test.cpp  integer_test.cpp  integermod_test.cpp  mpz_test.cpp  quadratic_integer_test.cpp  rational_test.cpp  test.cpp
tests/algorithm_test/: abs_test.cpp  gcd_test.cpp
tests/gmp_test/: mpz_test.cpp
tests/polynomial_test/: add_test.cpp  construction.cpp  ctr_test.cpp  equality_test.cpp  get_terms_test.cpp  identity_test.cpp  multiplication_test.cpp  negation_test.cpp  subtract_test.cpp  term_test.cpp
tests/ring_test/: integer_mod_test.cpp  integer_test.cpp  quadratic_integer_test.cpp  rational_test.cpp
